# Skadi-Engine

./: .gitignore  ;  LICENSE  Launch.cpp  README.md  \  meson.build  shell.nix
Dependancies/: tiny_gltf.h
Shaders/: compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
Source/: App.cpp  App.hpp  IdGen.hpp
Source/Core/DataStorage/: SparseSet.hpp
Source/Core/ECS/: ComponentManager.hpp  Definitions.hpp  ECS.hpp  EntityManager.cpp  EntityManager.hpp  Scene.cpp  Scene.hpp  Types.hpp
Source/Core/Messaging/: Event.hpp  Lambda.hpp
Source/ECS/: ComponentManager.hpp  ECS.hpp  EntityManager.cpp  EntityManager.hpp  Types.hpp
Source/ECS/DataStorage/: SparseSet.hpp
Source/ECS/Messaging/: Event.hpp  Lambda.hpp
Source/Graphics/: Camera.hpp  DisplayInstance.cpp  DisplayInstance.hpp  Pipeline.h  Rend.cpp  Rend.hpp  ResourceManager.cpp  ResourceManager.hpp  TransferBuffer.hpp  UniformBufferObject.hpp  Vertex.hpp  VulkMaterial.hpp  VulkMesh.hpp  VulkTexture.hpp  VulkanInstance.cpp  VulkanInstance.hpp
Source/Input/: Input.cpp  Input.hpp
Source/Physics/: Phys.cpp  Phys.hpp
Source/Resources/: Loader.cpp  Loader.hpp  Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp  Types.hpp  Vector.hpp
Source/Resources/Nodes/: Node.hpp
Test/: Tests.cpp  Tests.hpp
